@@ -339,11 +339,6 @@ input#searchbox {
 	border: 2px solid;
 	background-color: #dee;
 	color: black;
-	
-	/* Nonstandard, but very nice. */
-	opacity: 0.95;
-	-moz-opacity: 0.95;
-	filter: alpha(opacity=95);
 }
 
 /* Formbuilder styling */
