@@ -3,6 +3,7 @@ ikiwiki (3.03) UNRELEASED; urgency=low
   * Avoid feeding decoded unicode to Term::ReadLine.
     Closes: 512169
   * blogspam: Log spam info on failure.
+  * Remove nonstandard css. Closes: #512378
 
  -- Joey Hess <joeyh@debian.org>  Sun, 18 Jan 2009 14:50:57 -0500
 
